tests/errors/dlgama_arg.f90
program dlgama_arg
    print *, dlgama(2.7)
end program